2001-09-13	Joel Sherrill <joel@OARcorp.com>

	* setup.def, gccnewlib/gccnewlib.add, gccnewlib/target-gcc.add:
	Revert changes because of gcc 2.5.x/3.0 transition and continue
	to support gcc 2.95.x as primary version.

2001-09-13	Joel Sherrill <joel@OARcorp.com>

	* mkgccnewlibspec.in, 
	Use Target_alias not target_alias to avoid conflicts with new autoconf.
	* setup.def: Changed version numbers in attempt at building gcc 3.0.1.
	Only sparc and arm built for C/C++ OK. :(
	* gccnewlib/base-gcc.add: Modifications to reflect files not in gcc 3.x.
	* gccnewlib/gccnewlib.add: gcc 3.x does not have "everything in the name"
	* target-gcc.add: Modifications to reflect files not in gcc 3.1

2001-09-13	Joel Sherrill <joel@OARcorp.com>

	* autotools/.cvsignore: New file.

2001-07-19	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* autotools/Makefile.am, autotools/autoconf-rtems.spec,
	autotools/automake-rtems.spec: New.
	* configure.in, Makefile.am: Add autotools/.

2001-08-30	Joel Sherrill <joel@OARcorp.com>

	* .cvsignore: Add buildalltar.

2001-08-30	Joel Sherrill <joel@OARcorp.com>

	* buildalltar.in: New file.
	* configure.in, Makefile.am: Modified to reflect addition of file.

2001-08-10	Joel Sherrill <joel@OARcorp.com>

	* mkgdbspec.in: Make list of simulators very complete.
	* setup.def: Update versions.

2001-07-03	Joel Sherrill <joel@OARcorp.com>

	* setup.def, binutils.add, gccnewlib.add: Updated to build
	binutils 2.11.2 (rtems patch 20010622), gcc 2.95.3 (rtems
	patch a20010622), and newlib 1.9.0 (rtems patch 10020622).

2001-05-15	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.in: Remove AC_EXEEXT, treat .exe manually.
	* gccnewlib/base-gcc.add: Remove cpp.
	* gccnewlib/gccnewlib.add: mv cpp $target_alias-cpp, update
	copyright.

2001-04-16	Joel Sherrill <joel@OARcorp.com>

	* setup.def: Modified the binutils version to 2.11 and 
	RPM revision 3 to reflect experimentation with new binutils release.

2001-04-11	Joel Sherrill <joel@OARcorp.com>
